2010-02-11  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-04-01
	* add EditDatasetDialog.java to cvs

	* tag V01-04-00
	* gui: paths appear as daughter nodes to PDs under Streams
	* gui: paths can be added directly to PDs (and thereby to stream)
	* gui: PD editor
	* gui: pick configuration dialog really enforces selected
	releaseTag now
	* gui: order paths alphabetically in EC editor
	* gui: show parent stream in PD tooltip
	* gui: show parent EC in Stream tooltip
	* gui: display number of unassigned paths behind stream
	* gui: display output module icon;)

2010-02-10  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-12
	* bugfix to DatabaseMigrator (Vasu, 'Bug 26')

2010-02-09  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-11
	* bugfix to GUI (Vasu, 'Bug 25')

2010-02-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-10
	* fix Configuration.orderedSequenceIterator(). Without this fix,
	the OnlineConverter will fail to properly order the sequences, as
	reported by Maurizio
	* modify, save & corrupt problems (aka Edgar bug) fixed, small
	remaining issue regardin hasChanged(), yet to be addressed

2010-02-03  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-09
	* fix diff, properly handle OutputModules within reference
	containers

	* tag V01-03-08
	* further Edgar bug activities
	* fix --input file:dummy.root functionality (OfflineConverter)
	* make streams and datasets PSets (and contained parameters)
	tracked

2010-02-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-07
	* *really* fix the Edgar bug!

2010-02-01  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-03-06
	* fix the Edgar bug ;)

	* tag V01-03-05
	* gui: fix 'do you want to save' popup if nothing changed (Vasu)
	* gui: search extended to contents, streams, PDs, OMs
	* gui: contents can be reorderd (affectring stream/PD/OM order as
	well!)